[package]
name = "random-image-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.6"
serde = { version = "1.0", features = ["derive"] }
url = "2.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
actix-session = { version ="0.9",features = ["cookie-session"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.10"
log = "0.4"